--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-18.04, macos-latest]
         arch: [x64]
       fail-fast: false
     name: Build native ${{ matrix.arch }} library (${{ matrix.os }})
