--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
       if: runner.os == 'Windows'
       uses: microsoft/setup-msbuild@v1
 
-    - name: connect with upterm
+    - name: connect with upterm 1
       if: runner.os == 'macOS'
       uses: lhotari/action-upterm@v1
       with:
@@ -173,6 +173,13 @@ jobs:
     - name: Stop CentOS container
       if: runner.os == 'Linux' && matrix.arch == 'x64'
       run: docker rm -f centos
+
+    - name: connect with upterm 2
+      if: runner.os == 'macOS'
+      uses: lhotari/action-upterm@v1
+      with:
+        ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+        limit-access-to-actor: false
 
   # Download all native shared libraries and create the nuget package.
   # Upload nuget package as an artifact.
