--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,9 @@ jobs:
         esac
         echo "::set-output name=triplet::$triplet"
         echo "::set-output name=root::$VCPKG_INSTALLATION_ROOT"
-        echo "::set-output name=hash::${{ hashFiles('$VCPKG_INSTALLATION_ROOT/scripts/**/*.cmake') }}"
+        
+        hash ${{ hashFiles('$VCPKG_INSTALLATION_ROOT/scripts/**/*.cmake') }}
+        echo "::set-output name=hash::$hash"
       shell: bash
 
     # Get cmake version, which is used by vcpkg binary caching
