--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
         echo "::set-output name=triplet::$triplet"
         echo "::set-output name=root::$VCPKG_INSTALLATION_ROOT"
         
-        cmake_hash=${{ hashFiles('$VCPKG_INSTALLATION_ROOT/LICENSE.txt') }}
-        echo "::set-output name=cmake_hash::$cmake_hash"
+        cmake_hash_path="$VCPKG_INSTALLATION_ROOT/scripts/**/*.cmake"
+        echo "::set-output name=cmake_hash::${{ hashFiles($cmake_hash_path) }}"
       shell: bash
 
     # Get cmake version, which is used by vcpkg binary caching
