--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
             ;;
         esac
         echo "::set-output name=triplet::$triplet"
+        echo "${{fromJson('vcpkg.json').default-registry.baseline}}"
       shell: bash
 
     # Get cmake version, which is used by vcpkg binary caching
