--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ env:
   DOTNET_NOLOGO: true
   dotnet_3_version: '3.1.414'
   dotnet_5_version: '5.0.402'
-  VCPKG_COMMIT: bde216bf73eaf88c62acef2c46e301908d2900f0
 
 jobs:
 
@@ -83,7 +82,7 @@ jobs:
             ;;
         esac
         echo "::set-output name=triplet::$triplet"
-        echo "json:${{fromJson(steps.vcpkg-configuration.outputs.content).default-registry.baseline}}"
+        echo "::set-output name=vcpkg_commit::fromJson(steps.vcpkg-configuration.outputs.content).default-registry.baseline"
       shell: bash
 
     # Get cmake version, which is used by vcpkg binary caching
@@ -91,15 +90,15 @@ jobs:
       id: cmake-info
       run: echo "::set-output name=version::$(cmake --version | head -n1 | awk '{print $3}')"
       shell: bash
-
-    - uses: friendlyanon/setup-vcpkg@v1
+      
+    - name: Get baseline vcpkg
+      uses: friendlyanon/setup-vcpkg@v1
       with: 
-        committish: ${{ env.VCPKG_COMMIT }}
+        committish: ${{ steps.vcpkg-info.outputs.vcpkg_commit }}
         cache: true
-        cache-key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-${{ hashFiles('vcpkg-configuration.json') }}-${{ hashFiles('vcpkg.json') }}-${{ env.VCPKG_COMMIT }}
+        cache-key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-${{ hashFiles('vcpkg-configuration.json') }}-${{ hashFiles('vcpkg.json') }}-${{ steps.vcpkg-info.outputs.vcpkg_commit }}
         cache-restore-keys: |
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-
-        cache-version: 2
 
     # Setup a CentOS 7 container to build on Linux x64 for backwards compatibility.
     - name: Start CentOS container and install toolchain
