--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
       with: 
         committish: ${{ steps.vcpkg-info.outputs.vcpkg_commit }}
         cache: true
-        cache-key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-${{ hashFiles('vcpkg-configuration.json') }}-${{ hashFiles('vcpkg.json') }}-${{ steps.vcpkg-info.outputs.vcpkg_commit }}
+        cache-key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-configuration${{ hashFiles('vcpkg-configuration.json') }}-vcpkg${{ hashFiles('vcpkg.json') }}-commit${{ steps.vcpkg-info.outputs.vcpkg_commit }}
         cache-restore-keys: |
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-
