--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-
       env:
-        ImageOS: {{ $ImageOS }}
+        ImageOS: $ImageOS
         ImageVersion: ${{ env.ImageVersion }}
           
     # Setup a CentOS 7 container to build on Linux x64 for backwards compatibility.
