--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,8 +89,8 @@ jobs:
       run: |
         dir env:*
         echo "::set-output name=Value::$ImageOS$ImageVersion"
+      shell: bash
 
-      shell: pwsh
     # Check for cached vcpkg dependencies (use these if we can).
     - name: Get cached vcpkg dependencies
       id: get-cached-vcpkg
