--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,10 +86,10 @@ jobs:
       shell: bash
 
     - name: runner-info
+      id: runner-info
       run: |
         env
-        echo "::set-output name=ImageOS::$ImageOS"
-        echo "::set-output name=ImageVersion::$ImageVersion"
+        echo "::set-output name=Info::$ImageOS$ImageVersion"
       shell: bash
 
     # Check for cached vcpkg dependencies (use these if we can).
@@ -99,7 +99,7 @@ jobs:
       with:
         path: cache/vcpkg
         # $ImageOS $ImageVersion - 
-        key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-vcpkg_json${{ hashFiles('vcpkg*.json') }}-Runner${{ steps.runner-info.outputs.ImageOS }}${{ steps.runner-info.outputs.ImageVersion }}
+        key: vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-vcpkg_json${{ hashFiles('vcpkg*.json') }}-Runner${{ steps.runner-info.outputs.Info }}
         restore-keys: |
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-vcpkg_json${{ hashFiles('vcpkg*.json') }}-
           vcpkg-${{ steps.vcpkg-info.outputs.triplet }}-cmake${{ steps.cmake-info.outputs.version }}-
